# spice-gtk-usb-portal

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build.rs  gbindgen.toml
.github/action/setup-fedora/: action.yml
.github/workflows/: build.yml  c-bindings.yml  editorconfig.yml  lint.yml  pages.yml
docs/: SpiceUsbPortal.toml  overview.md
examples/: client.rs  smoke.py
src/: capi.rs  error.rs  ffi.rs  lib.rs
src/devices/: description.rs  error.rs  mod.rs  opened_device.rs
src/usbredir/: error.rs  mod.rs
